<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="server_api">AIzaSyCFyleO43oeqW4YK-hFT3iB-VbTUwwoB_w</string>
    <string name="sender_id">395052222231</string>
    <string name="prefs_address">prefs_address</string>
    <string name="prefs_check_out_product">prefs_check_out_products</string>
    <string name="prefs_check_out_vantage">prefs_check_out_vantages</string>
    <string name="prefs_sub_categories">prefs_sub_categories_</string>
    <string name="user_id">user_id</string>
    <string name="user">User</string>
    <string name="merchant">Merchant</string>
    <string name="prefs_user_mobile">prefs_user_mobile</string>
    <string name="prefs_shipping_info">prefs_shipping_info</string>
    <string name="prefs_gcm_reg_id">prefs_reg_id</string>
    <string name="prefs_app_version">prefs_app_version</string>
    <string name="payable">Payable</string>
    <string name="empty_cart_message">Do you want to empty cart</string>
    <string name="shipping_msg">If order amount is less than Rs. 150, extra charge of Rs. 20 will be applied.</string>
    <string name="thank_you">Thank You</string>
    <string name="order_no">Order No.</string>
    <string name="your_order_summary">Your Order Summary</string>
    <string name="order_confirm">Your order has been confirmed and will be dispatched soon. Meanwhile, you can check status of your order</string>
    <string name="amount">Amount</string>
    <string name="order_date">Order Date</string>
    <string name="order_id">Order Id</string>
    <string name="ROBOTO_REGULAR">sans-serif</string>
    <string name="IDS_STR_MY_PROFILE">My Profile</string>
    <string name="IDS_STR_DEMO">XXXX</string>
    <string name="CONFIRMATION_EMAIL_ID">PFH@makemytrip.com</string>
    <string name="IDS_STR_ROBOTO_MEDIUM">sans-serif-medium</string>
    <string name="ROBOTO_MEDIUM">sans-serif-medium</string>
    <string name="IDS_STR_MY_PROFILE_Gender">Gender</string>
    <string name="IDS_FORGOT_PASSWORD_SIGN_IN_SCREEN">Forgot Password?</string>
    <string name="IDS_STR_VERIFIED">VERIFIED</string>
    <string name="IDS_STR_MY_PROFILE_CHNG_PWD">CHANGE PASSWORD</string>
    <string name="IDS_STR_MY_PROFILE_FNAME">First Name</string>
    <string name="IDS_STR_MY_PROFILE_LNAME">Last Name</string>
    <string name="IDS_STR_MY_PROFILE_NEW_PWD">New Password</string>
    <string name="IDS_STR_MY_PROFILE_OLD_PWD">Old Password</string>
    <string name="IDS_STR_MY_PROFILE_PHN_NUMBER">Phone Number</string>
    <string name="IDS_STR_MY_PROFILE_RETYPR_PWD">Re-type Password</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="any_orientation">1D Any Orientation</string>
    <string name="scan_from_fragment">Scan from fragment</string>
    <string name="front_camera">Front Camera</string>
    <string name="custom_activity">Continuous Scan</string>
    <string name="toolbar_activity">Activity with Toolbar</string>
    <string name="custom_scanner">Custom Scanner Activity</string>
    <string name="scanner_with_margin">Scanner with Margin</string>
    <string name="turn_on_flashlight">Turn on Flashlight</string>
    <string name="turn_off_flashlight">Turn off Flashlight</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="add_product">Add Product</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="seprater">|</string>
    <string name="Register">Register Here</string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="Sign_up">Personal Information</string>
    <string name="storeId">Store Id</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact_no">Contact No.</string>
    <string name="email">Email</string>
    <string name="conf_password">Confirm Password</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="size">Product Size</string>
    <string name="weight">Weight</string>
    <string name="description">Description</string>
    <string name="image">Image</string>
    <string name="barcode">Barcode</string>
    <string name="upload">Upload</string>
    <string name="store_message">Oops No Store Found</string>
    <string name="product_message">Oops No Product Found</string>
    <string name="order_message">You dont have any order place please start shopping</string>
    <string name="reedme_message">Oops No Any Reward Points</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="Home">Home</string>
    <string name="Profile">Profile</string>
    <string name="MyStore">My Store</string>
    <string name="ReedMe">ReedMe</string>
    <string name="History">History</string>
    <string name="Logout">Logout</string>
    <string name="ContactUs">Contact Us</string>
    <string name="Help">Help</string>
    <string name="action_settings">Settings</string>
</resources>