<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff8b90af"
    android:id="@+id/rl"
    >

<ScrollView

    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:background="#e8e8e7"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#e8e8e7"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"

        android:layout_gravity="center"
        android:orientation="vertical" >


    <!--    <LinearLayout android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"

            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@drawable/greybackground"
            >

-->
            <EditText
                android:id="@+id/edt_productName"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dp_40"
                android:hint="@string/product_name"
                android:background="@color/grey_white"
                android:paddingLeft="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5"
                android:singleLine="true"
                android:layout_marginTop="110dp"/>

            <EditText
                android:id="@+id/edt_quantity"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dp_40"
                android:hint="@string/quantity"
                android:paddingLeft="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5"
                android:singleLine="true"
                android:background="@color/grey_white"
                android:layout_marginTop="@dimen/dp_10"/>

            <EditText
                android:id="@+id/edt_price"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dp_40"
                android:hint="@string/product_price"
                android:paddingLeft="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5"
                android:singleLine="true"
                android:inputType="number"
                android:background="@color/grey_white"
                android:layout_marginTop="@dimen/dp_10"/>

            <EditText
                android:id="@+id/edt_size"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dp_40"
                android:hint="@string/size"
                android:paddingLeft="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5"
                android:singleLine="true"
                android:inputType="number"
                android:background="@color/grey_white"
                android:layout_marginTop="@dimen/dp_10"/>
            <EditText
                android:id="@+id/edt_weight"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dp_40"
                android:hint="@string/weight"
                android:paddingLeft="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5"
                android:inputType="number"
                android:singleLine="true"
                android:background="@color/grey_white"
                android:layout_marginTop="@dimen/dp_10"/>
            <EditText
                android:id="@+id/edt_description"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dp_40"
                android:hint="@string/description"
                android:paddingLeft="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5"
                android:lines="3"
                android:background="@color/grey_white"
                android:layout_marginTop="@dimen/dp_10"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_product"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_190"
                    android:layout_weight="3"
                    android:layout_marginTop="@dimen/dp_10"/>

                <ImageView
                    android:id="@+id/img_camera"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_camera"/>




            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txt_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Enter Barcode"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:padding="@dimen/tendp"
                    android:background="@color/grey_white"

                    android:layout_gravity="left"/>
            <TextView
                android:id="@+id/txt_barcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Scan Barcode"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginLeft="@dimen/tendp"
                android:background="@color/colorAccent"
                android:padding="@dimen/tendp"
                android:layout_gravity="right"
                />
            </LinearLayout>

         <!--   <EditText android:layout_width="fill_parent"
                android:layout_height="@dimen/dp_40"
                android:hint="@string/barcode"
                android:paddingLeft="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5"
                android:background="@color/grey_white"
                android:layout_marginTop="@dimen/dp_10"/>
-->

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >


            </LinearLayout>
            <Button
                android:id="@+id/btn_add"
                android:layout_width="@dimen/dp_190"
                android:layout_height="@dimen/dp_40"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/add_product"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16"
                android:background="@color/colorPrimary"/>


        </LinearLayout>



<!--
    </LinearLayout>
-->



</ScrollView>
    </RelativeLayout>